# EVE-Preview-Manager

./: .gitignore  Cargo.toml  LICENSE  README.md  build-dist.sh  default.nix  flake.nix  shell.nix
.github/: 1.6.2_focus_handling.md
.github/workflows/: build.yml  ci.yml  discord-release.yml
assets/: com.evepreview.manager.metainfo.xml
src/: color.rs  constants.rs  hotkeys.rs  main.rs  types.rs  x11_utils.rs
src/common/: color.rs  constants.rs  debug.rs  ipc.rs  mod.rs
src/common/types/: character.rs  mod.rs
src/config/: backup.rs  daemon_state.rs  hotkey_binding.rs  mod.rs  profile.rs  runtime.rs  serialization.rs
src/daemon/: cycle_state.rs  dispatcher.rs  main_loop.rs  mod.rs  renderer.rs  session_state.rs  thumbnail.rs  window_detection.rs
src/daemon/font/: discovery.rs  rendering.rs
src/daemon/handlers/: input.rs  state.rs  window.rs
src/gui/: key_capture.rs  manager.rs  mod.rs  state.rs  utils.rs  x11_utils.rs
src/input/: backend.rs  device_detection.rs  evdev_backend.rs  listener.rs  x11_backend.rs
src/manager/: app.rs  app_slint.rs  key_capture.rs  mod.rs  utils.rs
src/preview/: cycle_state.rs  daemon.rs  dispatcher.rs  event_handler.rs  font.rs  font_discovery.rs  hotkeys.rs  mod.rs  overlay.rs  renderer.rs  session_state.rs  snapping.rs  thumbnail.rs  window_detection.rs
src/x11/: context.rs  mod.rs  ops.rs  query.rs  window.rs
ui/: main.slint  theme.slint
ui/components/: hotkey_modal.slint  profile_dialogs.slint  tab_button.slint
ui/tabs/: appearance.slint  behavior.slint  characters.slint  hotkeys.slint  sources.slint
(+26 files in other folders)
